2008-01-05  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: grent.c does not exist anymore. Remove the
	putgrent prototype.
	* lib/prototypes.h: "shadowio.h" was included for the definition
	of the spwd structure. Replace this include by <shadow.h>
	* libmisc/xmalloc.c, libmisc/utmp.c, libmisc/strtoday.c,
	libmisc/pwd_init.c, libmisc/tz.c, lib/port.c, lib/fputsx.c:
	Include "prototypes.h" to make sure the exported prototypes are
	the ones used for the definition of functions.
	* libmisc/console.c: Define is_listed() as static and add its
	prototype.
	* libmisc/xgetXXbyYY.c, libmisc/yesno.c: Include config.h as a
	system include, as recommended by the autoconf documentation.
	* libmisc/pam_pass.c: Define do_pam_passwd() as static and add its
	prototype.
	* libmisc/log.c: Define dolastlog() as static and add its
	prototype.
	* src/chage.c: Define isnum() as static and add its prototype.
	* libmisc/xgetspnam.c: Add missing include "shadowio.h". (This was
	OK as long as prototypes.h included this file.)
	* src/nologin.c: Make a proper prototype for the main() function
	declaration. (add void)
	* src/login.c: login_prompt is the name of a function, use
	loginprompt for the internal variable.
	* src/chsh.c: loginsh is a global variable, use newshell for the
	update_shell()'s parameter.
	* lib/gshadow.c: The prototypes of fgetsx() and fputsx() are
	already defined in prototypes.h. Remove the declaration of these
	functions.
	* lib/gshdow.c: list() is an external function. DO not shadow it
	with a static function. The internal list() was renamed
	build_list().
	* lib/commonio.c: stat shadows another stat variable. Remove this
	variable, and directly check the result of getfscreatecon().
	* libmisc/utmp.c: Remove the declaration of getutent(),
	getutline(), setutent(), and endutent() which are declared in
	<utmp.h>

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Remove duplicate logging to syslog.
